compute: multiple changes
Signed-off-by: Rickard von Essen <rickard.von.essen@gmail.com>

--- a/examples-generated/compute/v1beta1/instancegroupnamedport.yaml
+++ b/examples-generated/compute/v1beta1/instancegroupnamedport.yaml
@@ -57,7 +57,7 @@ metadata:
   name: my-cluster
 spec:
   forProvider:
-    deletionProtection: "true"
+    deletionProtection: true
     initialNodeCount: 1
     ipAllocationPolicy:
     - clusterIpv4CidrBlock: /19
