--- a/examples/compute/v1beta1/instancegroupnamedport.yaml
+++ b/examples/compute/v1beta1/instancegroupnamedport.yaml
@@ -67,6 +67,7 @@ metadata:
   name: instance-group-named-port
 spec:
   forProvider:
+    deletionProtection: false
     initialNodeCount: 1
     ipAllocationPolicy:
     - clusterIpv4CidrBlock: /19
