--- a/package/crds/compute.gcp.upbound.io_autoscalers.yaml
+++ b/package/crds/compute.gcp.upbound.io_autoscalers.yaml
@@ -1179,7 +1179,7 @@ spec:
                         properties:
                           maxScaledInReplicas:
                             description: |-
-                              A nested object resource
+                              A nested object resource.
                               Structure is documented below.
                             properties:
                               fixed:
@@ -1442,7 +1442,7 @@ spec:
                         properties:
                           maxScaledInReplicas:
                             description: |-
-                              A nested object resource
+                              A nested object resource.
                               Structure is documented below.
                             properties:
                               fixed:
@@ -1864,7 +1864,7 @@ spec:
                         properties:
                           maxScaledInReplicas:
                             description: |-
-                              A nested object resource
+                              A nested object resource.
                               Structure is documented below.
                             properties:
                               fixed:
