--- a/package/crds/compute.gcp.upbound.io_healthchecks.yaml
+++ b/package/crds/compute.gcp.upbound.io_healthchecks.yaml
@@ -1335,7 +1335,7 @@ spec:
                     type: string
                   grpcHealthCheck:
                     description: |-
-                      A nested object resource
+                      A nested object resource.
                       Structure is documented below.
                     properties:
                       grpcServiceName:
@@ -1367,7 +1367,7 @@ spec:
                     type: number
                   http2HealthCheck:
                     description: |-
-                      A nested object resource
+                      A nested object resource.
                       Structure is documented below.
                     properties:
                       host:
@@ -1412,7 +1412,7 @@ spec:
                     type: object
                   httpHealthCheck:
                     description: |-
-                      A nested object resource
+                      A nested object resource.
                       Structure is documented below.
                     properties:
                       host:
@@ -1457,7 +1457,7 @@ spec:
                     type: object
                   httpsHealthCheck:
                     description: |-
-                      A nested object resource
+                      A nested object resource.
                       Structure is documented below.
                     properties:
                       host:
@@ -1529,7 +1529,7 @@ spec:
                     type: array
                   sslHealthCheck:
                     description: |-
-                      A nested object resource
+                      A nested object resource.
                       Structure is documented below.
                     properties:
                       port:
@@ -1570,7 +1570,7 @@ spec:
                     type: object
                   tcpHealthCheck:
                     description: |-
-                      A nested object resource
+                      A nested object resource.
                       Structure is documented below.
                     properties:
                       port:
@@ -1646,7 +1646,7 @@ spec:
                     type: string
                   grpcHealthCheck:
                     description: |-
-                      A nested object resource
+                      A nested object resource.
                       Structure is documented below.
                     properties:
                       grpcServiceName:
@@ -1678,7 +1678,7 @@ spec:
                     type: number
                   http2HealthCheck:
                     description: |-
-                      A nested object resource
+                      A nested object resource.
                       Structure is documented below.
                     properties:
                       host:
@@ -1723,7 +1723,7 @@ spec:
                     type: object
                   httpHealthCheck:
                     description: |-
-                      A nested object resource
+                      A nested object resource.
                       Structure is documented below.
                     properties:
                       host:
@@ -1768,7 +1768,7 @@ spec:
                     type: object
                   httpsHealthCheck:
                     description: |-
-                      A nested object resource
+                      A nested object resource.
                       Structure is documented below.
                     properties:
                       host:
@@ -1840,7 +1840,7 @@ spec:
                     type: array
                   sslHealthCheck:
                     description: |-
-                      A nested object resource
+                      A nested object resource.
                       Structure is documented below.
                     properties:
                       port:
@@ -1881,7 +1881,7 @@ spec:
                     type: object
                   tcpHealthCheck:
                     description: |-
-                      A nested object resource
+                      A nested object resource.
                       Structure is documented below.
                     properties:
                       port:
@@ -2119,7 +2119,7 @@ spec:
                     type: string
                   grpcHealthCheck:
                     description: |-
-                      A nested object resource
+                      A nested object resource.
                       Structure is documented below.
                     properties:
                       grpcServiceName:
@@ -2151,7 +2151,7 @@ spec:
                     type: number
                   http2HealthCheck:
                     description: |-
-                      A nested object resource
+                      A nested object resource.
                       Structure is documented below.
                     properties:
                       host:
@@ -2196,7 +2196,7 @@ spec:
                     type: object
                   httpHealthCheck:
                     description: |-
-                      A nested object resource
+                      A nested object resource.
                       Structure is documented below.
                     properties:
                       host:
@@ -2241,7 +2241,7 @@ spec:
                     type: object
                   httpsHealthCheck:
                     description: |-
-                      A nested object resource
+                      A nested object resource.
                       Structure is documented below.
                     properties:
                       host:
@@ -2319,7 +2319,7 @@ spec:
                     type: array
                   sslHealthCheck:
                     description: |-
-                      A nested object resource
+                      A nested object resource.
                       Structure is documented below.
                     properties:
                       port:
@@ -2360,7 +2360,7 @@ spec:
                     type: object
                   tcpHealthCheck:
                     description: |-
-                      A nested object resource
+                      A nested object resource.
                       Structure is documented below.
                     properties:
                       port:
