--- a/package/crds/compute.gcp.upbound.io_regionhealthchecks.yaml
+++ b/package/crds/compute.gcp.upbound.io_regionhealthchecks.yaml
@@ -1316,7 +1316,7 @@ spec:
                     type: string
                   grpcHealthCheck:
                     description: |-
-                      A nested object resource
+                      A nested object resource.
                       Structure is documented below.
                     properties:
                       grpcServiceName:
@@ -1348,7 +1348,7 @@ spec:
                     type: number
                   http2HealthCheck:
                     description: |-
-                      A nested object resource
+                      A nested object resource.
                       Structure is documented below.
                     properties:
                       host:
@@ -1393,7 +1393,7 @@ spec:
                     type: object
                   httpHealthCheck:
                     description: |-
-                      A nested object resource
+                      A nested object resource.
                       Structure is documented below.
                     properties:
                       host:
@@ -1438,7 +1438,7 @@ spec:
                     type: object
                   httpsHealthCheck:
                     description: |-
-                      A nested object resource
+                      A nested object resource.
                       Structure is documented below.
                     properties:
                       host:
@@ -1504,7 +1504,7 @@ spec:
                     type: string
                   sslHealthCheck:
                     description: |-
-                      A nested object resource
+                      A nested object resource.
                       Structure is documented below.
                     properties:
                       port:
@@ -1545,7 +1545,7 @@ spec:
                     type: object
                   tcpHealthCheck:
                     description: |-
-                      A nested object resource
+                      A nested object resource.
                       Structure is documented below.
                     properties:
                       port:
@@ -1623,7 +1623,7 @@ spec:
                     type: string
                   grpcHealthCheck:
                     description: |-
-                      A nested object resource
+                      A nested object resource.
                       Structure is documented below.
                     properties:
                       grpcServiceName:
@@ -1655,7 +1655,7 @@ spec:
                     type: number
                   http2HealthCheck:
                     description: |-
-                      A nested object resource
+                      A nested object resource.
                       Structure is documented below.
                     properties:
                       host:
@@ -1700,7 +1700,7 @@ spec:
                     type: object
                   httpHealthCheck:
                     description: |-
-                      A nested object resource
+                      A nested object resource.
                       Structure is documented below.
                     properties:
                       host:
@@ -1745,7 +1745,7 @@ spec:
                     type: object
                   httpsHealthCheck:
                     description: |-
-                      A nested object resource
+                      A nested object resource.
                       Structure is documented below.
                     properties:
                       host:
@@ -1806,7 +1806,7 @@ spec:
                     type: string
                   sslHealthCheck:
                     description: |-
-                      A nested object resource
+                      A nested object resource.
                       Structure is documented below.
                     properties:
                       port:
@@ -1847,7 +1847,7 @@ spec:
                     type: object
                   tcpHealthCheck:
                     description: |-
-                      A nested object resource
+                      A nested object resource.
                       Structure is documented below.
                     properties:
                       port:
@@ -2085,7 +2085,7 @@ spec:
                     type: string
                   grpcHealthCheck:
                     description: |-
-                      A nested object resource
+                      A nested object resource.
                       Structure is documented below.
                     properties:
                       grpcServiceName:
@@ -2110,6 +2110,10 @@ spec:
                           following values:
                         type: string
                     type: object
+                  healthCheckId:
+                    description: The unique identifier number for the resource. This
+                      identifier is defined by the server.
+                    type: number
                   healthyThreshold:
                     description: |-
                       A so-far unhealthy instance will be marked healthy after this many
@@ -2117,7 +2121,7 @@ spec:
                     type: number
                   http2HealthCheck:
                     description: |-
-                      A nested object resource
+                      A nested object resource.
                       Structure is documented below.
                     properties:
                       host:
@@ -2162,7 +2166,7 @@ spec:
                     type: object
                   httpHealthCheck:
                     description: |-
-                      A nested object resource
+                      A nested object resource.
                       Structure is documented below.
                     properties:
                       host:
@@ -2207,7 +2211,7 @@ spec:
                     type: object
                   httpsHealthCheck:
                     description: |-
-                      A nested object resource
+                      A nested object resource.
                       Structure is documented below.
                     properties:
                       host:
@@ -2279,7 +2283,7 @@ spec:
                     type: string
                   sslHealthCheck:
                     description: |-
-                      A nested object resource
+                      A nested object resource.
                       Structure is documented below.
                     properties:
                       port:
@@ -2320,7 +2324,7 @@ spec:
                     type: object
                   tcpHealthCheck:
                     description: |-
-                      A nested object resource
+                      A nested object resource.
                       Structure is documented below.
                     properties:
                       port:
