--- a/package/crds/compute.gcp.upbound.io_subnetworks.yaml
+++ b/package/crds/compute.gcp.upbound.io_subnetworks.yaml
@@ -1051,6 +1051,7 @@ spec:
                       Provide this property when you create the subnetwork. For example,
                       10.0.0.0/8 or 192.168.0.0/16. Ranges must be unique and
                       non-overlapping within a network. Only IPv4 is supported.
+                      Field is optional when reserved_internal_range is defined, otherwise required.
                     type: string
                   ipv6AccessType:
                     description: |-
@@ -1202,16 +1203,21 @@ spec:
                     type: string
                   purpose:
                     description: |-
-                      The purpose of the resource. This field can be either PRIVATE_RFC_1918, REGIONAL_MANAGED_PROXY, GLOBAL_MANAGED_PROXY, PRIVATE_SERVICE_CONNECT or PRIVATE_NAT(Beta).
+                      The purpose of the resource. This field can be either PRIVATE, REGIONAL_MANAGED_PROXY, GLOBAL_MANAGED_PROXY, PRIVATE_SERVICE_CONNECT or PRIVATE_NAT(Beta).
                       A subnet with purpose set to REGIONAL_MANAGED_PROXY is a user-created subnetwork that is reserved for regional Envoy-based load balancers.
                       A subnetwork in a given region with purpose set to GLOBAL_MANAGED_PROXY is a proxy-only subnet and is shared between all the cross-regional Envoy-based load balancers.
                       A subnetwork with purpose set to PRIVATE_SERVICE_CONNECT reserves the subnet for hosting a Private Service Connect published service.
                       A subnetwork with purpose set to PRIVATE_NAT is used as source range for Private NAT gateways.
                       Note that REGIONAL_MANAGED_PROXY is the preferred setting for all regional Envoy load balancers.
-                      If unspecified, the purpose defaults to PRIVATE_RFC_1918.
+                      If unspecified, the purpose defaults to PRIVATE.
                     type: string
                   region:
                     description: The GCP region for this subnetwork.
+                    type: string
+                  reservedInternalRange:
+                    description: |-
+                      The ID of the reserved internal range. Must be prefixed with networkconnectivity.googleapis.com
+                      E.g. networkconnectivity.googleapis.com/projects/{project}/locations/global/internalRanges/{rangeId}
                     type: string
                   role:
                     description: |-
@@ -1240,6 +1246,7 @@ spec:
                             range. Provide this property when you create the subnetwork.
                             Ranges must be unique and non-overlapping with all primary and
                             secondary IP ranges within a network. Only IPv4 is supported.
+                            Field is optional when reserved_internal_range is defined, otherwise required.
                           type: string
                         rangeName:
                           description: |-
@@ -1247,6 +1254,11 @@ spec:
                             when adding an alias IP range to a VM instance. The name must
                             be 1-63 characters long, and comply with RFC1035. The name
                             must be unique within the subnetwork.
+                          type: string
+                        reservedInternalRange:
+                          description: |-
+                            The ID of the reserved internal range. Must be prefixed with networkconnectivity.googleapis.com
+                            E.g. networkconnectivity.googleapis.com/projects/{project}/locations/global/internalRanges/{rangeId}
                           type: string
                       type: object
                     type: array
@@ -1297,6 +1309,7 @@ spec:
                       Provide this property when you create the subnetwork. For example,
                       10.0.0.0/8 or 192.168.0.0/16. Ranges must be unique and
                       non-overlapping within a network. Only IPv4 is supported.
+                      Field is optional when reserved_internal_range is defined, otherwise required.
                     type: string
                   ipv6AccessType:
                     description: |-
@@ -1448,13 +1461,18 @@ spec:
                     type: string
                   purpose:
                     description: |-
-                      The purpose of the resource. This field can be either PRIVATE_RFC_1918, REGIONAL_MANAGED_PROXY, GLOBAL_MANAGED_PROXY, PRIVATE_SERVICE_CONNECT or PRIVATE_NAT(Beta).
+                      The purpose of the resource. This field can be either PRIVATE, REGIONAL_MANAGED_PROXY, GLOBAL_MANAGED_PROXY, PRIVATE_SERVICE_CONNECT or PRIVATE_NAT(Beta).
                       A subnet with purpose set to REGIONAL_MANAGED_PROXY is a user-created subnetwork that is reserved for regional Envoy-based load balancers.
                       A subnetwork in a given region with purpose set to GLOBAL_MANAGED_PROXY is a proxy-only subnet and is shared between all the cross-regional Envoy-based load balancers.
                       A subnetwork with purpose set to PRIVATE_SERVICE_CONNECT reserves the subnet for hosting a Private Service Connect published service.
                       A subnetwork with purpose set to PRIVATE_NAT is used as source range for Private NAT gateways.
                       Note that REGIONAL_MANAGED_PROXY is the preferred setting for all regional Envoy load balancers.
-                      If unspecified, the purpose defaults to PRIVATE_RFC_1918.
+                      If unspecified, the purpose defaults to PRIVATE.
+                    type: string
+                  reservedInternalRange:
+                    description: |-
+                      The ID of the reserved internal range. Must be prefixed with networkconnectivity.googleapis.com
+                      E.g. networkconnectivity.googleapis.com/projects/{project}/locations/global/internalRanges/{rangeId}
                     type: string
                   role:
                     description: |-
@@ -1483,6 +1501,7 @@ spec:
                             range. Provide this property when you create the subnetwork.
                             Ranges must be unique and non-overlapping with all primary and
                             secondary IP ranges within a network. Only IPv4 is supported.
+                            Field is optional when reserved_internal_range is defined, otherwise required.
                           type: string
                         rangeName:
                           description: |-
@@ -1490,6 +1509,11 @@ spec:
                             when adding an alias IP range to a VM instance. The name must
                             be 1-63 characters long, and comply with RFC1035. The name
                             must be unique within the subnetwork.
+                          type: string
+                        reservedInternalRange:
+                          description: |-
+                            The ID of the reserved internal range. Must be prefixed with networkconnectivity.googleapis.com
+                            E.g. networkconnectivity.googleapis.com/projects/{project}/locations/global/internalRanges/{rangeId}
                           type: string
                       type: object
                     type: array
@@ -1676,11 +1700,6 @@ spec:
             required:
             - forProvider
             type: object
-            x-kubernetes-validations:
-            - message: spec.forProvider.ipCidrRange is a required parameter
-              rule: '!(''*'' in self.managementPolicies || ''Create'' in self.managementPolicies
-                || ''Update'' in self.managementPolicies) || has(self.forProvider.ipCidrRange)
-                || (has(self.initProvider) && has(self.initProvider.ipCidrRange))'
           status:
             description: SubnetworkStatus defines the observed state of Subnetwork.
             properties:
@@ -1719,6 +1738,7 @@ spec:
                       Provide this property when you create the subnetwork. For example,
                       10.0.0.0/8 or 192.168.0.0/16. Ranges must be unique and
                       non-overlapping within a network. Only IPv4 is supported.
+                      Field is optional when reserved_internal_range is defined, otherwise required.
                     type: string
                   ipv6AccessType:
                     description: |-
@@ -1800,16 +1820,21 @@ spec:
                     type: string
                   purpose:
                     description: |-
-                      The purpose of the resource. This field can be either PRIVATE_RFC_1918, REGIONAL_MANAGED_PROXY, GLOBAL_MANAGED_PROXY, PRIVATE_SERVICE_CONNECT or PRIVATE_NAT(Beta).
+                      The purpose of the resource. This field can be either PRIVATE, REGIONAL_MANAGED_PROXY, GLOBAL_MANAGED_PROXY, PRIVATE_SERVICE_CONNECT or PRIVATE_NAT(Beta).
                       A subnet with purpose set to REGIONAL_MANAGED_PROXY is a user-created subnetwork that is reserved for regional Envoy-based load balancers.
                       A subnetwork in a given region with purpose set to GLOBAL_MANAGED_PROXY is a proxy-only subnet and is shared between all the cross-regional Envoy-based load balancers.
                       A subnetwork with purpose set to PRIVATE_SERVICE_CONNECT reserves the subnet for hosting a Private Service Connect published service.
                       A subnetwork with purpose set to PRIVATE_NAT is used as source range for Private NAT gateways.
                       Note that REGIONAL_MANAGED_PROXY is the preferred setting for all regional Envoy load balancers.
-                      If unspecified, the purpose defaults to PRIVATE_RFC_1918.
+                      If unspecified, the purpose defaults to PRIVATE.
                     type: string
                   region:
                     description: The GCP region for this subnetwork.
+                    type: string
+                  reservedInternalRange:
+                    description: |-
+                      The ID of the reserved internal range. Must be prefixed with networkconnectivity.googleapis.com
+                      E.g. networkconnectivity.googleapis.com/projects/{project}/locations/global/internalRanges/{rangeId}
                     type: string
                   role:
                     description: |-
@@ -1838,6 +1863,7 @@ spec:
                             range. Provide this property when you create the subnetwork.
                             Ranges must be unique and non-overlapping with all primary and
                             secondary IP ranges within a network. Only IPv4 is supported.
+                            Field is optional when reserved_internal_range is defined, otherwise required.
                           type: string
                         rangeName:
                           description: |-
@@ -1845,6 +1871,11 @@ spec:
                             when adding an alias IP range to a VM instance. The name must
                             be 1-63 characters long, and comply with RFC1035. The name
                             must be unique within the subnetwork.
+                          type: string
+                        reservedInternalRange:
+                          description: |-
+                            The ID of the reserved internal range. Must be prefixed with networkconnectivity.googleapis.com
+                            E.g. networkconnectivity.googleapis.com/projects/{project}/locations/global/internalRanges/{rangeId}
                           type: string
                       type: object
                     type: array
@@ -1866,6 +1897,10 @@ spec:
                       If not specified IPV4_ONLY will be used.
                       Possible values are: IPV4_ONLY, IPV4_IPV6.
                     type: string
+                  subnetworkId:
+                    description: The unique identifier number for the resource. This
+                      identifier is defined by the server.
+                    type: number
                 type: object
               conditions:
                 description: Conditions of the resource.
