--- a/package/crds/compute.gcp.upbound.io_targethttpsproxies.yaml
+++ b/package/crds/compute.gcp.upbound.io_targethttpsproxies.yaml
@@ -98,10 +98,13 @@ spec:
                     description: |-
                       Specifies how long to keep a connection open, after completing a response,
                       while there is no matching traffic (in seconds). If an HTTP keepalive is
-                      not specified, a default value (610 seconds) will be used. For Global
-                      external HTTP(S) load balancer, the minimum allowed value is 5 seconds and
-                      the maximum allowed value is 1200 seconds. For Global external HTTP(S)
-                      load balancer (classic), this option is not available publicly.
+                      not specified, a default value will be used. For Global
+                      external HTTP(S) load balancer, the default value is 610 seconds, the
+                      minimum allowed value is 5 seconds and the maximum allowed value is 1200
+                      seconds. For cross-region internal HTTP(S) load balancer, the default
+                      value is 600 seconds, the minimum allowed value is 5 seconds, and the
+                      maximum allowed value is 600 seconds. For Global external HTTP(S) load
+                      balancer (classic), this option is not available publicly.
                     type: number
                   project:
                     description: |-
@@ -133,6 +136,10 @@ spec:
                       INTERNAL_SELF_MANAGED and which with EXTERNAL, EXTERNAL_MANAGED
                       loadBalancingScheme consult ServerTlsPolicy documentation.
                       If left blank, communications are not encrypted.
+                      If you remove this field from your configuration at the same time as
+                      deleting or recreating a referenced ServerTlsPolicy resource, you will
+                      receive a resourceInUseByAnotherResource error. Use lifecycle.create_before_destroy
+                      within the ServerTlsPolicy resource to avoid this.
                     type: string
                   sslCertificates:
                     description: |-
@@ -352,10 +359,13 @@ spec:
                     description: |-
                       Specifies how long to keep a connection open, after completing a response,
                       while there is no matching traffic (in seconds). If an HTTP keepalive is
-                      not specified, a default value (610 seconds) will be used. For Global
-                      external HTTP(S) load balancer, the minimum allowed value is 5 seconds and
-                      the maximum allowed value is 1200 seconds. For Global external HTTP(S)
-                      load balancer (classic), this option is not available publicly.
+                      not specified, a default value will be used. For Global
+                      external HTTP(S) load balancer, the default value is 610 seconds, the
+                      minimum allowed value is 5 seconds and the maximum allowed value is 1200
+                      seconds. For cross-region internal HTTP(S) load balancer, the default
+                      value is 600 seconds, the minimum allowed value is 5 seconds, and the
+                      maximum allowed value is 600 seconds. For Global external HTTP(S) load
+                      balancer (classic), this option is not available publicly.
                     type: number
                   project:
                     description: |-
@@ -387,6 +397,10 @@ spec:
                       INTERNAL_SELF_MANAGED and which with EXTERNAL, EXTERNAL_MANAGED
                       loadBalancingScheme consult ServerTlsPolicy documentation.
                       If left blank, communications are not encrypted.
+                      If you remove this field from your configuration at the same time as
+                      deleting or recreating a referenced ServerTlsPolicy resource, you will
+                      receive a resourceInUseByAnotherResource error. Use lifecycle.create_before_destroy
+                      within the ServerTlsPolicy resource to avoid this.
                     type: string
                   sslCertificates:
                     description: |-
@@ -768,10 +782,13 @@ spec:
                     description: |-
                       Specifies how long to keep a connection open, after completing a response,
                       while there is no matching traffic (in seconds). If an HTTP keepalive is
-                      not specified, a default value (610 seconds) will be used. For Global
-                      external HTTP(S) load balancer, the minimum allowed value is 5 seconds and
-                      the maximum allowed value is 1200 seconds. For Global external HTTP(S)
-                      load balancer (classic), this option is not available publicly.
+                      not specified, a default value will be used. For Global
+                      external HTTP(S) load balancer, the default value is 610 seconds, the
+                      minimum allowed value is 5 seconds and the maximum allowed value is 1200
+                      seconds. For cross-region internal HTTP(S) load balancer, the default
+                      value is 600 seconds, the minimum allowed value is 5 seconds, and the
+                      maximum allowed value is 600 seconds. For Global external HTTP(S) load
+                      balancer (classic), this option is not available publicly.
                     type: number
                   id:
                     description: an identifier for the resource with format projects/{{project}}/global/targetHttpsProxies/{{name}}
@@ -812,6 +829,10 @@ spec:
                       INTERNAL_SELF_MANAGED and which with EXTERNAL, EXTERNAL_MANAGED
                       loadBalancingScheme consult ServerTlsPolicy documentation.
                       If left blank, communications are not encrypted.
+                      If you remove this field from your configuration at the same time as
+                      deleting or recreating a referenced ServerTlsPolicy resource, you will
+                      receive a resourceInUseByAnotherResource error. Use lifecycle.create_before_destroy
+                      within the ServerTlsPolicy resource to avoid this.
                     type: string
                   sslCertificates:
                     description: |-
