--- a/examples-generated/compute/v1beta1/networkfirewallpolicyassociation.yaml
+++ b/examples-generated/compute/v1beta1/networkfirewallpolicyassociation.yaml
@@ -4,8 +4,8 @@ metadata:
   annotations:
     meta.upbound.io/example-id: compute/v1beta1/networkfirewallpolicyassociation
   labels:
-    testing.upbound.io/example-name: primary
-  name: primary
+    testing.upbound.io/example-name: default
+  name: default
 spec:
   forProvider:
     attachmentTargetSelector:
@@ -13,7 +13,7 @@ spec:
         testing.upbound.io/example-name: network
     firewallPolicySelector:
       matchLabels:
-        testing.upbound.io/example-name: network_firewall_policy
+        testing.upbound.io/example-name: policy
     project: my-project-name
 
 ---
@@ -27,7 +27,8 @@ metadata:
     testing.upbound.io/example-name: network
   name: network
 spec:
-  forProvider: {}
+  forProvider:
+    autoCreateSubnetworks: false
 
 ---
 
@@ -37,8 +38,8 @@ metadata:
   annotations:
     meta.upbound.io/example-id: compute/v1beta1/networkfirewallpolicyassociation
   labels:
-    testing.upbound.io/example-name: network_firewall_policy
-  name: network-firewall-policy
+    testing.upbound.io/example-name: policy
+  name: policy
 spec:
   forProvider:
     description: Sample global network firewall policy
