--- a/examples-generated/compute/v1beta1/regionnetworkfirewallpolicyassociation.yaml
+++ b/examples-generated/compute/v1beta1/regionnetworkfirewallpolicyassociation.yaml
@@ -4,16 +4,16 @@ metadata:
   annotations:
     meta.upbound.io/example-id: compute/v1beta1/regionnetworkfirewallpolicyassociation
   labels:
-    testing.upbound.io/example-name: primary
-  name: primary
+    testing.upbound.io/example-name: default
+  name: default
 spec:
   forProvider:
     attachmentTargetSelector:
       matchLabels:
-        testing.upbound.io/example-name: basic_network
+        testing.upbound.io/example-name: network
     firewallPolicySelector:
       matchLabels:
-        testing.upbound.io/example-name: basic_regional_network_firewall_policy
+        testing.upbound.io/example-name: policy
     project: my-project-name
     region: us-west1
 
@@ -25,10 +25,11 @@ metadata:
   annotations:
     meta.upbound.io/example-id: compute/v1beta1/regionnetworkfirewallpolicyassociation
   labels:
-    testing.upbound.io/example-name: basic_network
-  name: basic-network
+    testing.upbound.io/example-name: network
+  name: network
 spec:
-  forProvider: {}
+  forProvider:
+    autoCreateSubnetworks: false
 
 ---
 
@@ -38,8 +39,8 @@ metadata:
   annotations:
     meta.upbound.io/example-id: compute/v1beta1/regionnetworkfirewallpolicyassociation
   labels:
-    testing.upbound.io/example-name: basic_regional_network_firewall_policy
-  name: basic-regional-network-firewall-policy
+    testing.upbound.io/example-name: policy
+  name: policy
 spec:
   forProvider:
     description: Sample global network firewall policy
