--- a/examples-generated/compute/v1beta2/image.yaml
+++ b/examples-generated/compute/v1beta2/image.yaml
@@ -8,5 +8,23 @@ metadata:
   name: example
 spec:
   forProvider:
-    rawDisk:
-    - source: https://storage.googleapis.com/bosh-gce-raw-stemcells/bosh-stemcell-97.98-google-kvm-ubuntu-xenial-go_agent-raw-1557960142.tar.gz
+    sourceDiskSelector:
+      matchLabels:
+        testing.upbound.io/example-name: persistent
+
+---
+
+apiVersion: compute.gcp.upbound.io/v1beta2
+kind: Disk
+metadata:
+  annotations:
+    meta.upbound.io/example-id: compute/v1beta2/image
+  labels:
+    testing.upbound.io/example-name: persistent
+  name: persistent
+spec:
+  forProvider:
+    image: ${data.google_compute_image.debian.self_link}
+    size: 10
+    type: pd-ssd
+    zone: us-central1-a
