--- a/examples/compute/v1beta1/firewallpolicyassociation.yaml
+++ b/examples/compute/v1beta1/firewallpolicyassociation.yaml
@@ -51,5 +51,6 @@ metadata:
   name: firewall-policy-assoc
 spec:
   forProvider:
+    deletionPolicy: false
     displayName: firewall-policy-assoc
     parent: organizations/1234567
