--- a/examples/compute/v1beta1/networkfirewallpolicyassociation.yaml
+++ b/examples/compute/v1beta1/networkfirewallpolicyassociation.yaml
@@ -30,8 +30,8 @@ metadata:
     testing.upbound.io/example-name: network
   name: network
 spec:
-  forProvider: {}
-
+  forProvider:
+    autoCreateSubnetworks: false
 ---
 
 apiVersion: compute.gcp.upbound.io/v1beta1
