--- a/package/crds/compute.gcp.upbound.io_externalvpngateways.yaml
+++ b/package/crds/compute.gcp.upbound.io_externalvpngateways.yaml
@@ -94,6 +94,15 @@ spec:
                             your on-premise gateway or another Cloud provider's VPN gateway,
                             it cannot be an IP address from Google Compute Engine.
                           type: string
+                        ipv6Address:
+                          description: |-
+                            IPv6 address of the interface in the external VPN gateway. This IPv6
+                            address can be either from your on-premise gateway or another Cloud
+                            provider's VPN gateway, it cannot be an IP address from Google Compute
+                            Engine. Must specify an IPv6 address (not IPV4-mapped) using any format
+                            described in RFC 4291 (e.g. 2001:db8:0:0:2d9:51:0:0). The output format
+                            is RFC 5952 format (e.g. 2001:db8::2d9:51:0:0).
+                          type: string
                       type: object
                     type: array
                   labels:
@@ -149,6 +158,15 @@ spec:
                             Only IPv4 is supported. This IP address can be either from
                             your on-premise gateway or another Cloud provider's VPN gateway,
                             it cannot be an IP address from Google Compute Engine.
+                          type: string
+                        ipv6Address:
+                          description: |-
+                            IPv6 address of the interface in the external VPN gateway. This IPv6
+                            address can be either from your on-premise gateway or another Cloud
+                            provider's VPN gateway, it cannot be an IP address from Google Compute
+                            Engine. Must specify an IPv6 address (not IPV4-mapped) using any format
+                            described in RFC 4291 (e.g. 2001:db8:0:0:2d9:51:0:0). The output format
+                            is RFC 5952 format (e.g. 2001:db8::2d9:51:0:0).
                           type: string
                       type: object
                     type: array
@@ -372,6 +390,15 @@ spec:
                             Only IPv4 is supported. This IP address can be either from
                             your on-premise gateway or another Cloud provider's VPN gateway,
                             it cannot be an IP address from Google Compute Engine.
+                          type: string
+                        ipv6Address:
+                          description: |-
+                            IPv6 address of the interface in the external VPN gateway. This IPv6
+                            address can be either from your on-premise gateway or another Cloud
+                            provider's VPN gateway, it cannot be an IP address from Google Compute
+                            Engine. Must specify an IPv6 address (not IPV4-mapped) using any format
+                            described in RFC 4291 (e.g. 2001:db8:0:0:2d9:51:0:0). The output format
+                            is RFC 5952 format (e.g. 2001:db8::2d9:51:0:0).
                           type: string
                       type: object
                     type: array
