--- a/package/crds/compute.gcp.upbound.io_firewalls.yaml
+++ b/package/crds/compute.gcp.upbound.io_firewalls.yaml
@@ -1121,7 +1121,7 @@ spec:
                             is only applicable for UDP or TCP protocol. Each entry must be
                             either an integer or a range. If not specified, this rule
                             applies to connections through any port.
-                            Example inputs include: ["22"], ["80","443"], and
+                            Example inputs include: [22], [80, 443], and
                             ["12345-12349"].
                           items:
                             type: string
@@ -1148,7 +1148,7 @@ spec:
                             is only applicable for UDP or TCP protocol. Each entry must be
                             either an integer or a range. If not specified, this rule
                             applies to connections through any port.
-                            Example inputs include: ["22"], ["80","443"], and
+                            Example inputs include: [22], [80, 443], and
                             ["12345-12349"].
                           items:
                             type: string
@@ -1398,7 +1398,7 @@ spec:
                             is only applicable for UDP or TCP protocol. Each entry must be
                             either an integer or a range. If not specified, this rule
                             applies to connections through any port.
-                            Example inputs include: ["22"], ["80","443"], and
+                            Example inputs include: [22], [80, 443], and
                             ["12345-12349"].
                           items:
                             type: string
@@ -1425,7 +1425,7 @@ spec:
                             is only applicable for UDP or TCP protocol. Each entry must be
                             either an integer or a range. If not specified, this rule
                             applies to connections through any port.
-                            Example inputs include: ["22"], ["80","443"], and
+                            Example inputs include: [22], [80, 443], and
                             ["12345-12349"].
                           items:
                             type: string
@@ -1834,7 +1834,7 @@ spec:
                             is only applicable for UDP or TCP protocol. Each entry must be
                             either an integer or a range. If not specified, this rule
                             applies to connections through any port.
-                            Example inputs include: ["22"], ["80","443"], and
+                            Example inputs include: [22], [80, 443], and
                             ["12345-12349"].
                           items:
                             type: string
@@ -1864,7 +1864,7 @@ spec:
                             is only applicable for UDP or TCP protocol. Each entry must be
                             either an integer or a range. If not specified, this rule
                             applies to connections through any port.
-                            Example inputs include: ["22"], ["80","443"], and
+                            Example inputs include: [22], [80, 443], and
                             ["12345-12349"].
                           items:
                             type: string
