--- a/package/crds/compute.gcp.upbound.io_globalforwardingrules.yaml
+++ b/package/crds/compute.gcp.upbound.io_globalforwardingrules.yaml
@@ -1968,6 +1968,19 @@ spec:
                             type: string
                         type: object
                     type: object
+                  networkTier:
+                    description: |-
+                      This signifies the networking tier used for configuring
+                      this load balancer and can only take the following values:
+                      PREMIUM, STANDARD.
+                      For regional ForwardingRule, the valid values are PREMIUM and
+                      STANDARD. For GlobalForwardingRule, the valid value is
+                      PREMIUM.
+                      If this field is not specified, it is assumed to be PREMIUM.
+                      If IPAddress is specified, this value must be equal to the
+                      networkTier of the Address.
+                      Possible values are: PREMIUM, STANDARD.
+                    type: string
                   noAutomateDnsZone:
                     description: This is used in PSC consumer ForwardingRule to control
                       whether it should try to auto-generate a DNS zone or not. Non-PSC
@@ -2533,6 +2546,19 @@ spec:
                             type: string
                         type: object
                     type: object
+                  networkTier:
+                    description: |-
+                      This signifies the networking tier used for configuring
+                      this load balancer and can only take the following values:
+                      PREMIUM, STANDARD.
+                      For regional ForwardingRule, the valid values are PREMIUM and
+                      STANDARD. For GlobalForwardingRule, the valid value is
+                      PREMIUM.
+                      If this field is not specified, it is assumed to be PREMIUM.
+                      If IPAddress is specified, this value must be equal to the
+                      networkTier of the Address.
+                      Possible values are: PREMIUM, STANDARD.
+                    type: string
                   noAutomateDnsZone:
                     description: This is used in PSC consumer ForwardingRule to control
                       whether it should try to auto-generate a DNS zone or not. Non-PSC
@@ -3011,6 +3037,10 @@ spec:
                     description: for all of the labels present on the resource.
                     type: object
                     x-kubernetes-map-type: granular
+                  forwardingRuleId:
+                    description: The unique identifier number for the resource. This
+                      identifier is defined by the server.
+                    type: number
                   id:
                     description: an identifier for the resource with format projects/{{project}}/global/forwardingRules/{{name}}
                     type: string
@@ -3129,6 +3159,19 @@ spec:
                       be used.
                       For Private Service Connect forwarding rules that forward traffic to Google
                       APIs, a network must be provided.
+                    type: string
+                  networkTier:
+                    description: |-
+                      This signifies the networking tier used for configuring
+                      this load balancer and can only take the following values:
+                      PREMIUM, STANDARD.
+                      For regional ForwardingRule, the valid values are PREMIUM and
+                      STANDARD. For GlobalForwardingRule, the valid value is
+                      PREMIUM.
+                      If this field is not specified, it is assumed to be PREMIUM.
+                      If IPAddress is specified, this value must be equal to the
+                      networkTier of the Address.
+                      Possible values are: PREMIUM, STANDARD.
                     type: string
                   noAutomateDnsZone:
                     description: This is used in PSC consumer ForwardingRule to control
