--- a/package/crds/compute.gcp.upbound.io_instancefromtemplates.yaml
+++ b/package/crds/compute.gcp.upbound.io_instancefromtemplates.yaml
@@ -1976,8 +1976,14 @@ spec:
                     properties:
                       enableNestedVirtualization:
                         type: boolean
+                      enableUefiNetworking:
+                        type: boolean
+                      performanceMonitoringUnit:
+                        type: string
                       threadsPerCore:
                         type: number
+                      turboMode:
+                        type: string
                       visibleCoreCount:
                         type: number
                     type: object
@@ -1992,10 +1998,24 @@ spec:
                             A unique name for the resource, required by GCE.
                             Changing this forces a new resource to be created.
                           type: string
-                        diskEncryptionKeyRaw:
-                          type: string
-                        diskEncryptionKeySha256:
-                          type: string
+                        diskEncryptionKeyRawSecretRef:
+                          description: A SecretKeySelector is a reference to a secret
+                            key in an arbitrary namespace.
+                          properties:
+                            key:
+                              description: The key to select.
+                              type: string
+                            name:
+                              description: Name of the secret.
+                              type: string
+                            namespace:
+                              description: Namespace of the secret.
+                              type: string
+                          required:
+                          - key
+                          - name
+                          - namespace
+                          type: object
                         kmsKeySelfLink:
                           type: string
                         mode:
@@ -2051,6 +2071,10 @@ spec:
                               type: string
                             type: object
                             x-kubernetes-map-type: granular
+                          resourcePolicies:
+                            items:
+                              type: string
+                            type: array
                           size:
                             type: number
                           storagePool:
@@ -2058,6 +2082,8 @@ spec:
                           type:
                             type: string
                         type: object
+                      interface:
+                        type: string
                       kmsKeySelfLink:
                         type: string
                       mode:
@@ -2095,6 +2121,8 @@ spec:
                     description: |-
                       A unique name for the resource, required by GCE.
                       Changing this forces a new resource to be created.
+                    type: string
+                  keyRevocationActionType:
                     type: string
                   labels:
                     additionalProperties:
@@ -2375,6 +2403,8 @@ spec:
                     properties:
                       automaticRestart:
                         type: boolean
+                      availabilityDomain:
+                        type: number
                       instanceTerminationAction:
                         type: string
                       localSsdRecoveryTimeout:
@@ -2562,8 +2592,14 @@ spec:
                     properties:
                       enableNestedVirtualization:
                         type: boolean
+                      enableUefiNetworking:
+                        type: boolean
+                      performanceMonitoringUnit:
+                        type: string
                       threadsPerCore:
                         type: number
+                      turboMode:
+                        type: string
                       visibleCoreCount:
                         type: number
                     type: object
@@ -2578,10 +2614,24 @@ spec:
                             A unique name for the resource, required by GCE.
                             Changing this forces a new resource to be created.
                           type: string
-                        diskEncryptionKeyRaw:
-                          type: string
-                        diskEncryptionKeySha256:
-                          type: string
+                        diskEncryptionKeyRawSecretRef:
+                          description: A SecretKeySelector is a reference to a secret
+                            key in an arbitrary namespace.
+                          properties:
+                            key:
+                              description: The key to select.
+                              type: string
+                            name:
+                              description: Name of the secret.
+                              type: string
+                            namespace:
+                              description: Namespace of the secret.
+                              type: string
+                          required:
+                          - key
+                          - name
+                          - namespace
+                          type: object
                         kmsKeySelfLink:
                           type: string
                         mode:
@@ -2637,6 +2687,10 @@ spec:
                               type: string
                             type: object
                             x-kubernetes-map-type: granular
+                          resourcePolicies:
+                            items:
+                              type: string
+                            type: array
                           size:
                             type: number
                           storagePool:
@@ -2644,6 +2698,8 @@ spec:
                           type:
                             type: string
                         type: object
+                      interface:
+                        type: string
                       kmsKeySelfLink:
                         type: string
                       mode:
@@ -2681,6 +2737,8 @@ spec:
                     description: |-
                       A unique name for the resource, required by GCE.
                       Changing this forces a new resource to be created.
+                    type: string
+                  keyRevocationActionType:
                     type: string
                   labels:
                     additionalProperties:
@@ -2961,6 +3019,8 @@ spec:
                     properties:
                       automaticRestart:
                         type: boolean
+                      availabilityDomain:
+                        type: number
                       instanceTerminationAction:
                         type: string
                       localSsdRecoveryTimeout:
@@ -3313,8 +3373,14 @@ spec:
                     properties:
                       enableNestedVirtualization:
                         type: boolean
+                      enableUefiNetworking:
+                        type: boolean
+                      performanceMonitoringUnit:
+                        type: string
                       threadsPerCore:
                         type: number
+                      turboMode:
+                        type: string
                       visibleCoreCount:
                         type: number
                     type: object
@@ -3328,8 +3394,6 @@ spec:
                           description: |-
                             A unique name for the resource, required by GCE.
                             Changing this forces a new resource to be created.
-                          type: string
-                        diskEncryptionKeyRaw:
                           type: string
                         diskEncryptionKeySha256:
                           type: string
@@ -3372,6 +3436,10 @@ spec:
                               type: string
                             type: object
                             x-kubernetes-map-type: granular
+                          resourcePolicies:
+                            items:
+                              type: string
+                            type: array
                           size:
                             type: number
                           storagePool:
@@ -3379,6 +3447,8 @@ spec:
                           type:
                             type: string
                         type: object
+                      interface:
+                        type: string
                       kmsKeySelfLink:
                         type: string
                       mode:
@@ -3396,6 +3466,8 @@ spec:
                         type: boolean
                     type: object
                   cpuPlatform:
+                    type: string
+                  creationTimestamp:
                     type: string
                   currentStatus:
                     type: string
@@ -3429,6 +3501,8 @@ spec:
                   id:
                     type: string
                   instanceId:
+                    type: string
+                  keyRevocationActionType:
                     type: string
                   labelFingerprint:
                     type: string
@@ -3568,6 +3642,8 @@ spec:
                     properties:
                       automaticRestart:
                         type: boolean
+                      availabilityDomain:
+                        type: number
                       instanceTerminationAction:
                         type: string
                       localSsdRecoveryTimeout:
