--- a/package/crds/compute.gcp.upbound.io_instancetemplates.yaml
+++ b/package/crds/compute.gcp.upbound.io_instancetemplates.yaml
@@ -3085,10 +3085,24 @@ spec:
                         description: Defines whether the instance should have nested
                           virtualization enabled. Defaults to false.
                         type: boolean
+                      enableUefiNetworking:
+                        description: Whether to enable UEFI networking for instance
+                          creation.
+                        type: boolean
+                      performanceMonitoringUnit:
+                        description: The PMU is a hardware component within the CPU
+                          core that monitors how the processor runs code. Valid values
+                          for the level of PMU are STANDARD, ENHANCED, and ARCHITECTURAL.
+                        type: string
                       threadsPerCore:
                         description: The number of threads per physical core. To disable
                           simultaneous multithreading (SMT) set this to 1.
                         type: number
+                      turboMode:
+                        description: Turbo frequency mode to use for the instance.
+                          Supported modes are currently either ALL_CORE_MAX or unset
+                          (default).
+                        type: string
                       visibleCoreCount:
                         description: The number of physical cores to expose to an
                           instance. visible cores info (VC).
@@ -3112,7 +3126,7 @@ spec:
                           Otherwise, on_host_maintenance has to be set to TERMINATE
                           or this will fail to create the VM. If SEV_SNP, currently
                           min_cpu_platform has to be set to "AMD Milan" or this will
-                          fail to create the VM. TDX is only available in beta.'
+                          fail to create the VM.'
                         type: string
                       enableConfidentialCompute:
                         description: Defines whether the instance should have confidential
@@ -3199,6 +3213,8 @@ spec:
                             sets the number of I/O operations per second that the disk can handle.
                             Values must be between 10,000 and 120,000. For more details, see the
                             Extreme persistent disk documentation.
+                          type: number
+                        provisionedThroughput:
                           type: number
                         resourceManagerTags:
                           additionalProperties:
@@ -3454,6 +3470,10 @@ spec:
                       A brief description to use for instances
                       created from this template.
                     type: string
+                  keyRevocationActionType:
+                    description: Action to be taken when a customer's encryption key
+                      is revoked. Supports STOP and NONE, with NONE being the default.
+                    type: string
                   labels:
                     additionalProperties:
                       type: string
@@ -3490,7 +3510,9 @@ spec:
                   namePrefix:
                     description: |-
                       Creates a unique name beginning with the specified
-                      prefix. Conflicts with name.
+                      prefix. Conflicts with name. Max length is 54 characters.
+                      Prefixes with lengths longer than 37 characters will use a shortened
+                      UUID that will be more prone to collisions.
                     type: string
                   networkInterface:
                     description: |-
@@ -3503,7 +3525,7 @@ spec:
                           description: |-
                             Access configurations, i.e. IPs via which this
                             instance can be accessed via the Internet.g. via tunnel or because it is running on another cloud instance
-                            on that network). This block can be repeated multiple times. Structure documented below.
+                            on that network). This block can be specified once per network_interface. Structure documented below.
                           items:
                             properties:
                               natIp:
@@ -3648,7 +3670,8 @@ spec:
                           type: object
                         nicType:
                           description: 'The type of vNIC to be used on this interface.
-                            Possible values: GVNIC, VIRTIO_NET.'
+                            Possible values: GVNIC, VIRTIO_NET. In the beta provider
+                            the additional values of MRDMA and IRDMA are supported.'
                           type: string
                         queueCount:
                           description: The networking queue count that's specified
@@ -3829,6 +3852,12 @@ spec:
                           automatically restarted if it is terminated by Compute Engine (not
                           terminated by a user). This defaults to true.
                         type: boolean
+                      availabilityDomain:
+                        description: Specifies the availability domain to place the
+                          instance in. The value must be a number between 1 and the
+                          number of availability domains specified in the spread placement
+                          policy attached to the instance.
+                        type: number
                       instanceTerminationAction:
                         description: Describe the type of termination action for SPOT
                           VM. Can be STOP or DELETE.  Read more on here
@@ -4082,10 +4111,24 @@ spec:
                         description: Defines whether the instance should have nested
                           virtualization enabled. Defaults to false.
                         type: boolean
+                      enableUefiNetworking:
+                        description: Whether to enable UEFI networking for instance
+                          creation.
+                        type: boolean
+                      performanceMonitoringUnit:
+                        description: The PMU is a hardware component within the CPU
+                          core that monitors how the processor runs code. Valid values
+                          for the level of PMU are STANDARD, ENHANCED, and ARCHITECTURAL.
+                        type: string
                       threadsPerCore:
                         description: The number of threads per physical core. To disable
                           simultaneous multithreading (SMT) set this to 1.
                         type: number
+                      turboMode:
+                        description: Turbo frequency mode to use for the instance.
+                          Supported modes are currently either ALL_CORE_MAX or unset
+                          (default).
+                        type: string
                       visibleCoreCount:
                         description: The number of physical cores to expose to an
                           instance. visible cores info (VC).
@@ -4109,7 +4152,7 @@ spec:
                           Otherwise, on_host_maintenance has to be set to TERMINATE
                           or this will fail to create the VM. If SEV_SNP, currently
                           min_cpu_platform has to be set to "AMD Milan" or this will
-                          fail to create the VM. TDX is only available in beta.'
+                          fail to create the VM.'
                         type: string
                       enableConfidentialCompute:
                         description: Defines whether the instance should have confidential
@@ -4196,6 +4239,8 @@ spec:
                             sets the number of I/O operations per second that the disk can handle.
                             Values must be between 10,000 and 120,000. For more details, see the
                             Extreme persistent disk documentation.
+                          type: number
+                        provisionedThroughput:
                           type: number
                         resourceManagerTags:
                           additionalProperties:
@@ -4451,6 +4496,10 @@ spec:
                       A brief description to use for instances
                       created from this template.
                     type: string
+                  keyRevocationActionType:
+                    description: Action to be taken when a customer's encryption key
+                      is revoked. Supports STOP and NONE, with NONE being the default.
+                    type: string
                   labels:
                     additionalProperties:
                       type: string
@@ -4487,7 +4536,9 @@ spec:
                   namePrefix:
                     description: |-
                       Creates a unique name beginning with the specified
-                      prefix. Conflicts with name.
+                      prefix. Conflicts with name. Max length is 54 characters.
+                      Prefixes with lengths longer than 37 characters will use a shortened
+                      UUID that will be more prone to collisions.
                     type: string
                   networkInterface:
                     description: |-
@@ -4500,7 +4551,7 @@ spec:
                           description: |-
                             Access configurations, i.e. IPs via which this
                             instance can be accessed via the Internet.g. via tunnel or because it is running on another cloud instance
-                            on that network). This block can be repeated multiple times. Structure documented below.
+                            on that network). This block can be specified once per network_interface. Structure documented below.
                           items:
                             properties:
                               natIp:
@@ -4645,7 +4696,8 @@ spec:
                           type: object
                         nicType:
                           description: 'The type of vNIC to be used on this interface.
-                            Possible values: GVNIC, VIRTIO_NET.'
+                            Possible values: GVNIC, VIRTIO_NET. In the beta provider
+                            the additional values of MRDMA and IRDMA are supported.'
                           type: string
                         queueCount:
                           description: The networking queue count that's specified
@@ -4826,6 +4878,12 @@ spec:
                           automatically restarted if it is terminated by Compute Engine (not
                           terminated by a user). This defaults to true.
                         type: boolean
+                      availabilityDomain:
+                        description: Specifies the availability domain to place the
+                          instance in. The value must be a number between 1 and the
+                          number of availability domains specified in the spread placement
+                          policy attached to the instance.
+                        type: number
                       instanceTerminationAction:
                         description: Describe the type of termination action for SPOT
                           VM. Can be STOP or DELETE.  Read more on here
@@ -5247,10 +5305,24 @@ spec:
                         description: Defines whether the instance should have nested
                           virtualization enabled. Defaults to false.
                         type: boolean
+                      enableUefiNetworking:
+                        description: Whether to enable UEFI networking for instance
+                          creation.
+                        type: boolean
+                      performanceMonitoringUnit:
+                        description: The PMU is a hardware component within the CPU
+                          core that monitors how the processor runs code. Valid values
+                          for the level of PMU are STANDARD, ENHANCED, and ARCHITECTURAL.
+                        type: string
                       threadsPerCore:
                         description: The number of threads per physical core. To disable
                           simultaneous multithreading (SMT) set this to 1.
                         type: number
+                      turboMode:
+                        description: Turbo frequency mode to use for the instance.
+                          Supported modes are currently either ALL_CORE_MAX or unset
+                          (default).
+                        type: string
                       visibleCoreCount:
                         description: The number of physical cores to expose to an
                           instance. visible cores info (VC).
@@ -5274,7 +5346,7 @@ spec:
                           Otherwise, on_host_maintenance has to be set to TERMINATE
                           or this will fail to create the VM. If SEV_SNP, currently
                           min_cpu_platform has to be set to "AMD Milan" or this will
-                          fail to create the VM. TDX is only available in beta.'
+                          fail to create the VM.'
                         type: string
                       enableConfidentialCompute:
                         description: Defines whether the instance should have confidential
@@ -5284,6 +5356,9 @@ spec:
                           TERMINATE or this will fail to create the VM.
                         type: boolean
                     type: object
+                  creationTimestamp:
+                    description: Creation timestamp in RFC3339 text format.
+                    type: string
                   description:
                     description: A brief description of this resource.
                     type: string
@@ -5361,6 +5436,8 @@ spec:
                             sets the number of I/O operations per second that the disk can handle.
                             Values must be between 10,000 and 120,000. For more details, see the
                             Extreme persistent disk documentation.
+                          type: number
+                        provisionedThroughput:
                           type: number
                         resourceManagerTags:
                           additionalProperties:
@@ -5469,6 +5546,10 @@ spec:
                       A brief description to use for instances
                       created from this template.
                     type: string
+                  keyRevocationActionType:
+                    description: Action to be taken when a customer's encryption key
+                      is revoked. Supports STOP and NONE, with NONE being the default.
+                    type: string
                   labels:
                     additionalProperties:
                       type: string
@@ -5508,7 +5589,9 @@ spec:
                   namePrefix:
                     description: |-
                       Creates a unique name beginning with the specified
-                      prefix. Conflicts with name.
+                      prefix. Conflicts with name. Max length is 54 characters.
+                      Prefixes with lengths longer than 37 characters will use a shortened
+                      UUID that will be more prone to collisions.
                     type: string
                   networkInterface:
                     description: |-
@@ -5521,7 +5604,7 @@ spec:
                           description: |-
                             Access configurations, i.e. IPs via which this
                             instance can be accessed via the Internet.g. via tunnel or because it is running on another cloud instance
-                            on that network). This block can be repeated multiple times. Structure documented below.
+                            on that network). This block can be specified once per network_interface. Structure documented below.
                           items:
                             properties:
                               natIp:
@@ -5608,7 +5691,8 @@ spec:
                           type: string
                         nicType:
                           description: 'The type of vNIC to be used on this interface.
-                            Possible values: GVNIC, VIRTIO_NET.'
+                            Possible values: GVNIC, VIRTIO_NET. In the beta provider
+                            the additional values of MRDMA and IRDMA are supported.'
                           type: string
                         queueCount:
                           description: The networking queue count that's specified
@@ -5713,6 +5797,12 @@ spec:
                           automatically restarted if it is terminated by Compute Engine (not
                           terminated by a user). This defaults to true.
                         type: boolean
+                      availabilityDomain:
+                        description: Specifies the availability domain to place the
+                          instance in. The value must be a number between 1 and the
+                          number of availability domains specified in the spread placement
+                          policy attached to the instance.
+                        type: number
                       instanceTerminationAction:
                         description: Describe the type of termination action for SPOT
                           VM. Can be STOP or DELETE.  Read more on here
