--- a/package/crds/compute.gcp.upbound.io_regionnetworkendpointgroups.yaml
+++ b/package/crds/compute.gcp.upbound.io_regionnetworkendpointgroups.yaml
@@ -1843,6 +1843,19 @@ spec:
                       The ID of the project in which the resource belongs.
                       If it is not provided, the provider project is used.
                     type: string
+                  pscData:
+                    description: |-
+                      This field is only used for PSC NEGs.
+                      Structure is documented below.
+                    properties:
+                      producerPort:
+                        description: |-
+                          The PSC producer port to use when consumer PSC NEG connects to a producer. If
+                          this flag isn't specified for a PSC NEG with endpoint type
+                          private-service-connect, then PSC NEG will be connected to a first port in the
+                          available PSC producer port range.
+                        type: string
+                    type: object
                   pscTargetService:
                     description: |-
                       This field is only used for PSC and INTERNET NEGs.
@@ -2355,6 +2368,19 @@ spec:
                       The ID of the project in which the resource belongs.
                       If it is not provided, the provider project is used.
                     type: string
+                  pscData:
+                    description: |-
+                      This field is only used for PSC NEGs.
+                      Structure is documented below.
+                    properties:
+                      producerPort:
+                        description: |-
+                          The PSC producer port to use when consumer PSC NEG connects to a producer. If
+                          this flag isn't specified for a PSC NEG with endpoint type
+                          private-service-connect, then PSC NEG will be connected to a first port in the
+                          available PSC producer port range.
+                        type: string
+                    type: object
                   pscTargetService:
                     description: |-
                       This field is only used for PSC and INTERNET NEGs.
@@ -2798,6 +2824,19 @@ spec:
                       The ID of the project in which the resource belongs.
                       If it is not provided, the provider project is used.
                     type: string
+                  pscData:
+                    description: |-
+                      This field is only used for PSC NEGs.
+                      Structure is documented below.
+                    properties:
+                      producerPort:
+                        description: |-
+                          The PSC producer port to use when consumer PSC NEG connects to a producer. If
+                          this flag isn't specified for a PSC NEG with endpoint type
+                          private-service-connect, then PSC NEG will be connected to a first port in the
+                          available PSC producer port range.
+                        type: string
+                    type: object
                   pscTargetService:
                     description: |-
                       This field is only used for PSC and INTERNET NEGs.
