--- a/package/crds/compute.gcp.upbound.io_regiontargethttpsproxies.yaml
+++ b/package/crds/compute.gcp.upbound.io_regiontargethttpsproxies.yaml
@@ -85,6 +85,14 @@ spec:
                   description:
                     description: An optional description of this resource.
                     type: string
+                  httpKeepAliveTimeoutSec:
+                    description: |-
+                      Specifies how long to keep a connection open, after completing a response,
+                      while there is no matching traffic (in seconds). If an HTTP keepalive is
+                      not specified, a default value (600 seconds) will be used. For Regioanl
+                      HTTP(S) load balancer, the minimum allowed value is 5 seconds and the
+                      maximum allowed value is 600 seconds.
+                    type: number
                   project:
                     description: |-
                       The ID of the project in which the resource belongs.
@@ -312,6 +320,14 @@ spec:
                   description:
                     description: An optional description of this resource.
                     type: string
+                  httpKeepAliveTimeoutSec:
+                    description: |-
+                      Specifies how long to keep a connection open, after completing a response,
+                      while there is no matching traffic (in seconds). If an HTTP keepalive is
+                      not specified, a default value (600 seconds) will be used. For Regioanl
+                      HTTP(S) load balancer, the minimum allowed value is 5 seconds and the
+                      maximum allowed value is 600 seconds.
+                    type: number
                   project:
                     description: |-
                       The ID of the project in which the resource belongs.
@@ -695,6 +711,14 @@ spec:
                   description:
                     description: An optional description of this resource.
                     type: string
+                  httpKeepAliveTimeoutSec:
+                    description: |-
+                      Specifies how long to keep a connection open, after completing a response,
+                      while there is no matching traffic (in seconds). If an HTTP keepalive is
+                      not specified, a default value (600 seconds) will be used. For Regioanl
+                      HTTP(S) load balancer, the minimum allowed value is 5 seconds and the
+                      maximum allowed value is 600 seconds.
+                    type: number
                   id:
                     description: an identifier for the resource with format projects/{{project}}/regions/{{region}}/targetHttpsProxies/{{name}}
                     type: string
